RESOLVED FIXED220431
Text fields should not be translated while typing
https://bugs.webkit.org/show_bug.cgi?id=220431
Summary Text fields should not be translated while typing
Wenson Hsieh
Reported 2021-01-07 12:29:43 PST
On iOS 14 or macOS 11: 1. Go to bahn.de 2. Translate to English 3. Focus the train station field 4. Attempt to type The typed text is immediately "translated", which makes text entry very difficult.
Attachments
Patch (4.97 KB, patch)
2021-01-07 12:38 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-01-07 12:30:00 PST
Wenson Hsieh
Comment 2 2021-01-07 12:38:43 PST
Wenson Hsieh
Comment 3 2021-01-07 13:09:02 PST
Comment on attachment 417202 [details] Patch Thanks for the review!
EWS
Comment 4 2021-01-07 15:09:34 PST
Committed r271262: <https://trac.webkit.org/changeset/271262> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417202 [details].
Note You need to log in before you can comment on or make changes to this bug.